# cmake_rust_sample

./: CMakeLists.txt  README.md  main.cpp
cmake/Modules/: CMakeCargo.cmake
include/: test_lib.h
src/test-lib/src/: lib.rs
